# pre-commit-stack

./: .codespell-ignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  .sqlfluff  .taplo.toml  .yamllint  INSTALL.md  Makefile  README.md  analysis_options.yaml  biome.json  dcm.yaml  deny.toml  pyproject.toml
.github/workflows/: ci.yml
scripts/: check_sql_injection.py  check_sql_syntax.py  validate_odoo_structure.py
