[tool.ruff]
target-version = "py311" # Odoo 19 requires Python 3.11+
line-length = 79
indent-width = 4

# Exclude Odoo-specific directories
extend-exclude = [
    "__pycache__",
    "*.pyc",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "setup",
    "static",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # Pylint
    "RUF", # Ruff-specific rules
]

ignore = [
    "E501",    # Line too long
    "N999",    # Invalid module name (Odoo uses non-PEP8)
    "N802",    # Function name should be lowercase
    "N806",    # Variable in function should be lowercase
    "N815",    # Variable in class scope mixedCase
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value
    "RET504",  # Unnecessary assignment before return
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"__manifest__.py" = ["all"]
"**/tests/**/*.py" = ["S101", "ARG", "PLR2004"]
"**/static/src/**/*.py" = ["all"]               # OWL components

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-third-party = ["odoo", "odoo.addons"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "odoo",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
odoo = ["odoo", "odoo.addons"]

# ============================================
# PYLINT with pylint-odoo for Odoo 19
# ============================================

[tool.pylint.MASTER]
load-plugins = "pylint_odoo"
init-hook = 'import sys; sys.setrecursionlimit(8 * sys.getrecursionlimit())'

[tool.pylint.ODOOLINT]
# Set Odoo 19 as target version
valid_odoo_versions = ["19.0"]

manifest_deprecated_keys = ["active", "description"]
manifest_required_keys = ["name", "version", "depends", "license", "author"]
manifest_required_author = "OCA"

# Updated license list for Odoo 19
license_allowed = [
    "AGPL-3",
    "LGPL-3",
    "GPL-3",
    "Apache-2.0",
    "MIT",
    "Other proprietary",
]

[tool.pylint.MESSAGES_CONTROL]
enable = ["odoolint"]

disable = [
    "C0103", # Invalid name
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function docstring
    "R0903", # Too few public methods
    "W0212", # Access to protected member
    "W0223", # Method abstract
    "R0801", # Similar lines
]

[tool.pylint.FORMAT]
max-line-length = 79

[tool.pylint.DESIGN]
max-args = 8
max-attributes = 15
max-locals = 25

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["setup/", "static/"]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "*/tests/*",
    "*/static/*",
    "*/setup/*",
    "*/__manifest__.py",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 80
precision = 2
show_missing = true

# ============================================
# Project dependencies for pre-commit scripts
# ============================================

[project]
name = "pre-commit-stack"
version = "0.1.0"
description = "Universal pre-commit stack for multiple languages"
requires-python = ">=3.11"
dependencies = [
    "sqlparse>=0.5.0",      # SQL syntax validation
    "sqlfluff>=3.4.0",      # SQL linting
    "PyYAML>=6.0",          # YAML processing
    "yamllint>=1.37.1",     # YAML linting
    "requests>=2.31.0",     # HTTP requests for checks
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.5",
    "mypy>=1.18.2",
]
